# py-hdWGCNA

./: .gitignore  LICENSE  README.md  pyproject.toml  tf_demo.py
.github/workflows/: ci.yml
examples/: .gitignore  R_vs_Python_hdWGCNA_Benchmark_executed.ipynb
py_hdWGCNA/: __init__.py  analysis.py  core.py  enrichment.py  hdWGCNA.py  metacells.py  modules.py  network.py  plotting.py  projection.py  tf_network.py  tf_plotting.py  utils.py
tests/: conftest.py  test_analysis.py  test_core.py  test_enrichment_projection.py  test_integration.py  test_modules.py  test_network.py  test_plotting.py
